src/objects/AgileOne_Customer__c.object
<CustomObject>
    <description>Staging Table for Customer Conversion - R2</description>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Combined__c</fullName>
        <label>Address2_Combined</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgileOneId__c</fullName>
        <label>AgileOneId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_LastMonth__c</fullName>
        <label>BC_LastMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_PriorMonth__c</fullName>
        <label>BC_PriorMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_ThisMonth__c</fullName>
        <label>BC_ThisMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Today__c</fullName>
        <label>BC_Today</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <label>Certified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNE__c</fullName>
        <label>DNE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNM__c</fullName>
        <label>DNM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailStatus__c</fullName>
        <label>EmailStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MasterContactID__c</fullName>
        <label>MasterContactID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBC_LastMonth__c</fullName>
        <label>NBC_LastMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBC_PriorMonth__c</fullName>
        <label>NBC_PriorMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBC_ThisMonth__c</fullName>
        <label>NBC_ThisMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBC_Today__c</fullName>
        <label>NBC_Today</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_AS400CustomerNumber__c</fullName>
        <externalId>true</externalId>
        <label>NBTY_AS400CustomerNumber</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NBTY_BirthMonth__c</fullName>
        <label>NBTY_BirthMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_BirthYear__c</fullName>
        <label>NBTY_BirthYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_Deceased__c</fullName>
        <label>NBTY_Deceased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_DeleteCode__c</fullName>
        <label>NBTY_DeleteCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_FirstPurchaseDate__c</fullName>
        <label>NBTY_FirstPurchaseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NBTY_Frequency__c</fullName>
        <label>NBTY_Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBTY_Gender__c</fullName>
        <label>NBTY_Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_LastPurchaseDate__c</fullName>
        <label>NBTY_LastPurchaseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NBTY_OrgCode__c</fullName>
        <label>NBTY_OrgCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBTY_PurchAmt__c</fullName>
        <label>NBTY_PurchAmt</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plus4__c</fullName>
        <label>Plus4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REC_TYPE__c</fullName>
        <label>REC_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sal__c</fullName>
        <label>Sal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suite__c</fullName>
        <label>Suite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>AgileOne_Customer</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>AgileOne_Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AgileOne_Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>